# cargonode

./: .clippy.toml  .gitignore  CHANGELOG.MD  CHANGELOG.md  Cargo.toml  README.md  TODO.md  build.rs  cliff.toml  default.nix  dist-workspace.toml  flake.nix  install_cargonode.sh  nixfmt  package.nix  shell.nix
.cargo/: config.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: audit.yml  changelog.yml  ci.yml  ci_installation.yml  installation_tests.yml  release.yml  test_install.yml
assets/template/: package.json
assets/template/src/: main.js
benches/: operations_benchmarks.rs  platform_benchmarks.rs
ci/: build_and_publish  build_and_publish.sh  build_and_publish_m2  sha256-releases  sha256_releases  ubuntu_install_packages  ubuntu_install_packages.sh
ci/tests/: install_custom_dir.bats  install_default.bats  invalid_version.bats  missing_dependency.bats  overwrite_existing.bats  verbose_mode.bats
crates/cn-core/: Cargo.toml
crates/cn-core/src/: dependency.rs  error.rs  fs.rs  lib.rs  package_manager.rs  path.rs  registry.rs  template.rs
pkg/brew/: cargonode-bin.rb  cargonode.rb
pkg/windows/: Manifest.xml
src/: cache.rs  cargo_node.rs  cmd.rs  config.rs  error.rs  events.rs  exec.rs  inputs.rs  integration.rs  job.rs  journal.rs  lib.rs  logging.rs  main.rs  outputs.rs  package.rs  parser.rs  pkgmgr.rs  progress.rs  project.rs  replace.rs  shell.rs  template.rs  ui.rs  utils.rs  workflow.rs
src/cargo_node/: bootstrap.rs  exec.rs  file_util.rs  package.rs
src/cmd/: project.rs
src/commands/: config.rs  generic.rs  journal.rs  mod.rs  project.rs  run.rs
src/config/: source.rs
src/core/: package.rs
src/integration/: biome.rs  release_it.rs  tsup.rs  vitest.rs
src/ops/: init.rs  mod.rs  new.rs  parser.rs  replace.rs  runner.rs  validate.rs
src/ui/: status.rs
src/util/: fs.rs  mod.rs  platform.rs
templates/cn-ts/: package-lock.json  package.json  tsup.config.ts
templates/cn-ts/test/: index.test.ts
templates/node_typescript/: cargonode.toml  package-lock.json  package.json  tsconfig.json
tests/: cli.rs  integration_test.rs  mod.rs  package_test.rs  trycmd.rs
tests/cmd/: basic.md  workflow.md
tests/core/: package.rs
tests/ui/: status.rs
tests/util/: fs.rs  mod.rs  platform.rs
wix/: main.wxs
