[package]
name = "cargonode"
version = "0.1.3"
edition = "2021"
authors = ["Success Kingsley <hello@xosnrdev.tech>"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils"
]
keywords = ["productivity", "developer-tools", "cross-platform"]
description = "A unified CLI tool that brings Cargo's developer experience to Node.js"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xosnrdev/cargonode"
homepage = "https://github.com/xosnrdev/cargonode?tab=readme-ov-file#readme"

[[bin]]
name = "cn"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
clap-cargo = "0.15.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
regex = "1.10.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = true
debug = false
incremental = false
overflow-checks = false

[profile.dev]
opt-level = 0
debug = true

[dev-dependencies]
tempfile = "3.16.0"
