[package]
name = "cargonode"
version = "1.0.0"
edition = "2021"
authors = ["Success Kingsley <hello@xosnrdev.tech>"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils"
]
keywords = ["productivity", "developer-tools", "cross-platform"]
description = "A simple build tool for Node.js projects."
license = "MIT OR Apache-2.0"
repository = "https://github.com/xosnrdev/cargonode"
homepage = "https://github.com/xosnrdev/cargonode?tab=readme-ov-file#readme"

[package.metadata.wix]
upgrade-guid = "D9F96E7C-692A-496B-9940-DBA1E89332F4"
path-guid = "A4082DF7-7A47-4E31-BDC2-AC5804E2BEF7"
license = false
eula = false

[package.metadata.git-cliff]
git-cliff-path = "cliff.toml"
changelog-path = "CHANGELOG.md"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
clap-cargo = "0.15.2"
glob = "0.3.2"
regex = "1.10.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
thiserror = "2.0.12"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = true
debug = false
incremental = false
overflow-checks = false

[profile.dev]
opt-level = 0
debug = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
tempfile = "3.17.1"
