[package]
name = "cn-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait = "0.1.86"
glob = "0.3.2"
reqwest = { version = "0.12.12", features = ["json"] }
semver = { version = "1.0.25", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.24.0"
tempfile = "3.16.0"
tokio = { version = "1.43.0", features = ["full", "test-util"] }
wiremock = "0.6.2"
